# cite-right

./: .gitignore  README.md  main.py  pyproject.toml
citeright/: __init__.py  main.py  utils.py
citeright/fetchers/: __init__.py  arxiv.py  books.py  crossref.py  openalex.py
citeright/formatters/: __init__.py  apa.py  chicago.py  harvard.py  ieee.py  mla.py  vancouver.py
tests/: test_fetchers.py  test_formatters.py
