[project]
name = "cite-right"
version = "0.1.0"
description = "Generate perfect academic citations from DOI, URL, ISBN or title"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "cite-right contributors" }]
keywords = ["citation", "bibliography", "doi", "crossref", "academic", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/yourusername/cite-right"
Repository = "https://github.com/yourusername/cite-right"

[project.scripts]
cite-right = "citeright.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["citeright"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
